feat: termine esercizio

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FizzBuzz</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- bootstrap -->
+    <!-- mycss -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- /mycss -->
 </head>
 
 <body>
+    <div class="container text-center">
+        <h1 class="display-1 fw-bold">FizzBuzzDOM</h1>
+        <ul class="list-ul d-flex flex-wrap justify-content-center gap-3 pt-5">
+
+        </ul>
+    </div>
     <script src="js/main.js"></script>
 </body>
 
